bug 816483 - cache instantiated user fonts and share them across pages that use the same resources. r=roc